Fixed test configuration.

--- a/resources/public/test.html
+++ b/resources/public/test.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/style.css" rel="stylesheet" type="text/css">
-  <link rel="icon" href="https://clojurescript.org/images/cljs-logo-icon-32.png">
-  <title>clown Test Host Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <title>clown Test Host Page</title>
 </head>
 <body>
 <h1>Test host page</h1>
+<p>This is a host page for testing the client portion of the clown program.
+    <br>
+    The testing configuration loads this file instead of starting the main
+    program.</p>
+<p>If you would prefer not to load the browser at all, see some of the
+    <br>
+    comments in <code>test.cljs.edn</code> for examples of how to run the tests
+    <br>
+    in a headless system.</p>
 <script src="test-main.js" type="text/javascript"></script>
 </body>
 </html>
